--- a/default.html
+++ b/default.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="assets/global.css">
     <script>var exports = {};</script>
     <script src="https://kangax.github.io/compat-table/data-es6.js"></script>
-    <script src="assets/global.js"></script>
-    <script type="application/javascript;version=1.7" src="assets/global.js"></script>
+    <script src="assets/default.js"></script>
+    <script type="application/javascript;version=1.7" src="assets/default.js"></script>
   </head>
   <body>
     <header class="pure-g main">
