First boring walkthrough complete.

--- a/example.html
+++ b/example.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>let and const</title>
+<title>...</title>
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/pure-min.css">
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="assets/global.css">
 <style type="text/css" media="screen">
   .editor-holder {
     position: relative;
-    height: 500px;
+    height: 600px;
   }
   .pure-form label {
     margin-left: 1em;
@@ -48,7 +48,7 @@
   </fieldset>
 </form>
 <div class="editor-holder">
-  <div id="editor">console.log('hello, curtis');</div>
+  <div id="editor"></div>
 </div>
 <div id="console"></div>
 
