--- a/example.html
+++ b/example.html
@@ -25,6 +25,7 @@
     color: #2D8730;
     font-family: "Monaco","Menlo","Ubuntu Mono","Consolas","source-code-pro",monospace;
     font-size: 18px;
+    overflow: auto;
   }
   #console pre {
     margin: 0 0 3px 0;
@@ -36,21 +37,27 @@
 </style>
 </head>
 <body>
-<form class="pure-form">
-  <fieldset>
-    <button id="run" class="pure-button pure-button-primary"><span class="fa fa-play"></span> Run</button>
-    <label for="use-console">
-      <input id="use-console" type="checkbox" checked> Show in browser console
-    </label>
-    <label for="use-traceur">
-      <input id="use-traceur" type="checkbox" checked disabled=""> Force use of traceur
-    </label>
-  </fieldset>
-</form>
-<div class="editor-holder">
-  <div id="editor"></div>
+<div class="pure-g">
+  <div class="pure-u-1-2">
+    <form class="pure-form">
+      <fieldset>
+        <button id="run" class="pure-button pure-button-primary"><span class="fa fa-play"></span> Run</button>
+        <label for="use-console">
+          <input id="use-console" type="checkbox" checked> Show in browser console
+        </label>
+        <label for="use-traceur">
+          <input id="use-traceur" type="checkbox" checked disabled=""> Force use of traceur
+        </label>
+      </fieldset>
+    </form>
+    <div class="editor-holder">
+      <div id="editor"></div>
+    </div>
+  </div>
+  <div class="pure-u-1-2">
+    <div id="console"></div>
+  </div>
 </div>
-<div id="console"></div>
 
 <script src="https://google.github.io/traceur-compiler/bin/traceur.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js" type="text/javascript" charset="utf-8"></script>
