--- a/example.html
+++ b/example.html
@@ -41,7 +41,7 @@
 <body>
 <div class="pure-g">
   <div class="pure-u-1-2">
-    <form class="pure-form">
+    <form class="pure-form unsubmitable">
       <fieldset>
         <button id="run" class="pure-button pure-button-primary"><span class="fa fa-play"></span> Run</button>
         <label for="use-console">
@@ -57,12 +57,19 @@
     </div>
   </div>
   <div class="pure-u-1-2">
-    <form class="pure-form">
+    <form class="pure-form unsubmitable">
       <fieldset>
         <button id="clear-console" class="pure-button pure-button-primary"><span class="fa fa-circle-o"></span> Clear console</button>
       </fieldset>
     </form>
     <div id="console"></div>
+  </div>
+  <div class="pure-u">
+    <form class="pure-form" method="get" action="./default.html">
+      <fieldset>
+        <button class="pure-button">Back to table of contents</button>
+      </fieldset>
+    </form>
   </div>
 </div>
 
