Don't wrap the console output on long strings.

--- a/example.html
+++ b/example.html
@@ -32,6 +32,8 @@
   #console pre {
     margin: 0 0 3px 0;
     padding: 0;
+    white-space: pre;
+    word-wrap: inherit;
   }
   #console pre.error {
     color: red;
