Show keyboard binding for Run button.

--- a/example.html
+++ b/example.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
     <title>...</title>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
@@ -11,7 +12,7 @@
       <div class="pure-u-1-2">
         <form class="pure-form unsubmitable">
           <fieldset>
-            <button id="run" class="pure-button pure-button-primary"><span class="fa fa-play"></span> Run</button>
+            <button id="run" class="pure-button pure-button-primary"><span class="fa fa-play"></span> Run (⌘+S)</button>
             <label for="use-console">
               <input id="use-console" type="checkbox" checked> Show in browser console
             </label>
