Filter click handler on 'Yes' block.

--- a/default.html
+++ b/default.html
@@ -21,8 +21,8 @@
           landscape of chaos and fun.
         </p>
         <p>
-          Click a "Yes" below to learn about and try out a new feature in
-          ECMAScript.
+          Click a solid green "Yes" box below to learn about and try out a new
+          feature in ECMAScript.
         </p>
       </h2>
     </header>
