Change color theme. Add view me on GitHub button.

--- a/default.html
+++ b/default.html
@@ -21,17 +21,21 @@
           landscape of chaos and fun.
         </p>
         <p>
-          Click a solid green "Yes" box below to learn about and try out a new
-          feature in ECMAScript.
+          Click a solid lime green "Yes" box below to learn about and try out a
+          new feature in ECMAScript.
         </p>
       </h2>
     </header>
     <section id="tools">
-      <form class="pure-form">
+      <form class="pure-form" method="get" action="https://github.com/realistschuckle/es6-walkthroughs">
         <label>
           <input type="checkbox" id="hide-not-ready" checked>
           Hide walkthroughs without content.
         </label>
+        <button class="pure-button pure-button-primary">
+          <img src="assets/GitHub-Mark-Light-32px.png">
+          View me on GitHub
+        </button>
       </form>
     </section>
     <section id="toc">
