Add links to the singly-referenced ES items.

--- a/default.html
+++ b/default.html
@@ -344,7 +344,7 @@
             <td></td>
           </tr>
           <tr class="not-ready" data-test="Math.cbrt">
-            <td>Math.cbrt (hyperbolic cube root)</td>
+            <td>Math.cbrt (cube root)</td>
             <td></td>
             <td></td>
           </tr>
