Walkthrough for Array.prototype.fill which closes #1.

--- a/default.html
+++ b/default.html
@@ -295,7 +295,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Array.prototype.fill">
+          <tr data-test="Array.prototype.fill">
             <td>Array.prototype.fill</td>
             <td></td>
             <td></td>
