Walkthrough for Array.prototype.find which closes #2.

--- a/default.html
+++ b/default.html
@@ -300,7 +300,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Array.prototype.find">
+          <tr data-test="Array.prototype.find">
             <td>Array.prototype.find</td>
             <td></td>
             <td></td>
