Create walkthrough for Array.prototype.findIndex which closes #3.

--- a/default.html
+++ b/default.html
@@ -305,7 +305,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Array.prototype.findIndex">
+          <tr data-test="Array.prototype.findIndex">
             <td>Array.prototype.findIndex</td>
             <td></td>
             <td></td>
