Create walkthrough for Array.prototype.keys which closes #4

--- a/default.html
+++ b/default.html
@@ -310,7 +310,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Array.prototype.keys">
+          <tr data-test="Array.prototype.keys">
             <td>Array.prototype.keys</td>
             <td></td>
             <td></td>
