Note the key binding for clearing the console.

--- a/example.html
+++ b/example.html
@@ -28,7 +28,7 @@
       <div class="pure-u-1-2">
         <form class="pure-form unsubmitable">
           <fieldset>
-            <button id="clear-console" class="pure-button pure-button-primary"><span class="fa fa-circle-o"></span> Clear console</button>
+            <button id="clear-console" class="pure-button pure-button-primary"><span class="fa fa-circle-o"></span> Clear console (ESC)</button>
           </fieldset>
         </form>
         <div id="console"></div>
