--- a/example.html
+++ b/example.html
@@ -42,6 +42,9 @@
       </div>
     </div>
 
+    <script>var exports = {}, tests = {};</script>
+    <script src="https://kangax.github.io/compat-table/data-es6.js"></script>
+    <script src="assets/default.js"></script>
     <script src="https://google.github.io/traceur-compiler/bin/traceur.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js" type="text/javascript" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script>
