Create a walkthrough for Array.prototype.values which closes #5

--- a/default.html
+++ b/default.html
@@ -315,7 +315,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Array.prototype.values">
+          <tr data-test="Array.prototype.values">
             <td>Array.prototype.values</td>
             <td></td>
             <td></td>
