Add the walkthrough for Math.acosh which closes #6.

--- a/default.html
+++ b/default.html
@@ -327,9 +327,9 @@
           </tr>
         </tbody>
         <tbody>
-          <tr class="not-ready" data-test="Math.acosh">
+          <tr data-test="Math.acosh">
             <th rowspan="17">Math extensions</th>
-            <td>Math.acosh (hyperbolic arccosine)</td>
+            <td>Math.acosh (inverse hyperbolic cosine)</td>
             <td></td>
             <td></td>
           </tr>
