Create the walkthrough for Math.asinh which closes #7.

--- a/default.html
+++ b/default.html
@@ -333,7 +333,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.asinh">
+          <tr data-test="Math.asinh">
             <td>Math.asinh (hyperbolic arcsin)</td>
             <td></td>
             <td></td>
