Better name for the feature.

--- a/default.html
+++ b/default.html
@@ -334,12 +334,12 @@
             <td></td>
           </tr>
           <tr data-test="Math.asinh">
-            <td>Math.asinh (hyperbolic arcsin)</td>
+            <td>Math.asinh (inverse hyperbolic sine)</td>
             <td></td>
             <td></td>
           </tr>
           <tr class="not-ready" data-test="Math.atanh">
-            <td>Math.atanh (hyperbolic arctangent)</td>
+            <td>Math.atanh (inverse hyperbolic tangent)</td>
             <td></td>
             <td></td>
           </tr>
