Create the walkthrough for Math.atanh which closes #8.

--- a/default.html
+++ b/default.html
@@ -338,7 +338,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.atanh">
+          <tr data-test="Math.atanh">
             <td>Math.atanh (inverse hyperbolic tangent)</td>
             <td></td>
             <td></td>
