Created the walkthrough for Math.cosh which closes #11.

--- a/default.html
+++ b/default.html
@@ -353,7 +353,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.cosh">
+          <tr data-test="Math.cosh">
             <td>Math.cosh (hyperbolic cosine)</td>
             <td></td>
             <td></td>
