Created a walkthrough for Math.sinh which closes #20.

--- a/default.html
+++ b/default.html
@@ -398,7 +398,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.sinh">
+          <tr data-test="Math.sinh">
             <td>Math.sinh (hyperbolic sine)</td>
             <td></td>
             <td></td>
