Created the walkthrough for Math.tanh which closes #21.

--- a/default.html
+++ b/default.html
@@ -403,7 +403,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.tanh">
+          <tr data-test="Math.tanh">
             <td>Math.tanh (hyperbolic tangent)</td>
             <td></td>
             <td></td>
