--- a/default.html
+++ b/default.html
@@ -343,7 +343,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.cbrt">
+          <tr data-test="Math.cbrt">
             <td>Math.cbrt (cube root)</td>
             <td></td>
             <td></td>
