Created the walkthrough for Math.log2 which closes #18.

--- a/default.html
+++ b/default.html
@@ -388,7 +388,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.log2">
+          <tr data-test="Math.log2">
             <td>Math.log2 (base 2 logarithm)</td>
             <td></td>
             <td></td>
