Create the walkthrough for Math.log10 which closes #16.

--- a/default.html
+++ b/default.html
@@ -378,7 +378,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.log10">
+          <tr data-test="Math.log10">
             <td>Math.log10 (base 10 logarithm)</td>
             <td></td>
             <td></td>
