Created a walkthrough for Math.clz32 which closes #10.

--- a/default.html
+++ b/default.html
@@ -348,8 +348,8 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.clz32">
-            <td>Math.clz32 (number of leading zeros in the 32-bit binary representation of x)</td>
+          <tr data-test="Math.clz32">
+            <td>Math.clz32 (count leading zero bits in the 32-bit binary representation of its argument)</td>
             <td></td>
             <td></td>
           </tr>
