Change the name of the two sections on the main page.

--- a/default.html
+++ b/default.html
@@ -48,7 +48,7 @@
         </colgroup>
         <thead>
           <tr>
-            <th colspan="2" class="toc-group-walkthrough">Interesting walkthroughs</th>
+            <th colspan="2" class="toc-group-walkthrough">Interesting narrated walkthroughs</th>
             <th class="toc-native-support">Native in your browser?</th>
             <th class="toc-traceur-support">Supported by traceur?</th>
           </tr>
@@ -268,7 +268,7 @@
         </colgroup>
         <thead>
           <tr>
-            <th colspan="2">Boring single-page experiences</th>
+            <th colspan="2">Boring text-only experiences</th>
             <th>Native in your browser?</th>
             <th>Supported by traceur?</th>
           </tr>
