Create the walkthrough for Math.expm1 to close #12.

--- a/default.html
+++ b/default.html
@@ -358,7 +358,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.expm1">
+          <tr data-test="Math.expm1">
             <td>Math.expm1 (e<sup>x</sup> - 1)</td>
             <td></td>
             <td></td>
