Create the walkthrough for Math.fround which closes #13.

--- a/default.html
+++ b/default.html
@@ -363,7 +363,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.fround">
+          <tr data-test="Math.fround">
             <td>Math.fround (float round)</td>
             <td></td>
             <td></td>
