Create the walkthrough for Math.hypot which closes #14.

--- a/default.html
+++ b/default.html
@@ -84,7 +84,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Reflect">
+          <tr data-test="Reflect">
             <td colspan="2">Reflection methods</td>
             <td></td>
             <td></td>
@@ -152,7 +152,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Function.prototype.toMethod">
+          <tr data-test="Function.prototype.toMethod">
             <th rowspan="6">Functions</th>
             <td>Turning functions into methods</td>
             <td></td>
@@ -173,7 +173,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="proper tail calls (tail call optimisation)">
+          <tr data-test="proper tail calls (tail call optimisation)">
             <td>Tail-call recursion</td>
             <td></td>
             <td></td>
@@ -210,7 +210,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Reflect.Loader">
+          <tr data-test="Reflect.Loader">
             <td>Module loader</td>
             <td></td>
             <td></td>
@@ -252,7 +252,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Symbol.create, Symbol.hasInstance, Symbol.isConcatSpreadable, Symbol.isRegExp, Symbol.iterator, Symbol.toPrimitive, Symbol.toStringTag, Symbol.unscopables">
+          <tr data-test="Symbol.create, Symbol.hasInstance, Symbol.isConcatSpreadable, Symbol.isRegExp, Symbol.iterator, Symbol.toPrimitive, Symbol.toStringTag, Symbol.unscopables">
             <td>Advanced symbols for conversion</td>
             <td></td>
             <td></td>
@@ -320,7 +320,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Array.prototype[Symbol.unscopables]">
+          <tr data-test="Array.prototype[Symbol.unscopables]">
             <td>Array.prototype[Symbol.unscopables]</td>
             <td></td>
             <td></td>
@@ -368,7 +368,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.hypot">
+          <tr data-test="Math.hypot">
             <td>Math.hypot (square root of the sum of squares)</td>
             <td></td>
             <td></td>
@@ -464,22 +464,22 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="RegExp.prototype.match">
+          <tr data-test="RegExp.prototype.match">
             <td>Matching a string from a regular expression</td>
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="RegExp.prototype.replace">
+          <tr data-test="RegExp.prototype.replace">
             <td>Replace a match in a string from a regular expression</td>
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="RegExp.prototype.search">
+          <tr data-test="RegExp.prototype.search">
             <td>Search for a substring in a string from a regular expression</td>
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="RegExp.prototype.split">
+          <tr data-test="RegExp.prototype.split">
             <td>Split a string from a regular expression</td>
             <td></td>
             <td></td>
