Created the walkthrough for Math.imul which closes #15.

--- a/default.html
+++ b/default.html
@@ -373,7 +373,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.imul">
+          <tr data-test="Math.imul">
             <td>Math.imul (integer multiplication)</td>
             <td></td>
             <td></td>
