Change the label of Math.trunc so Knuth won't get angry with me. Again.

--- a/default.html
+++ b/default.html
@@ -409,7 +409,7 @@
             <td></td>
           </tr>
           <tr class="not-ready" data-test="Math.trunc">
-            <td>Math.trunc (truncation of mantissa)</td>
+            <td>Math.trunc (truncation of the fraction part of a number)</td>
             <td></td>
             <td></td>
           </tr>
