Created the walkthrough for Math.log1p which closes #17.

--- a/default.html
+++ b/default.html
@@ -383,7 +383,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.log1p">
+          <tr data-test="Math.log1p">
             <td>Math.log1p (natural logarithm of 1 + x)</td>
             <td></td>
             <td></td>
