Create the walkthrough for Math.sign which closes #19.

--- a/default.html
+++ b/default.html
@@ -393,7 +393,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.sign">
+          <tr data-test="Math.sign">
             <td>Math.sign (the sign of the number)</td>
             <td></td>
             <td></td>
