Created the walkthrough for Math.trunc which closes #22.

--- a/default.html
+++ b/default.html
@@ -408,7 +408,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Math.trunc">
+          <tr data-test="Math.trunc">
             <td>Math.trunc (truncation of the fraction part of a number)</td>
             <td></td>
             <td></td>
