Created the Number.EPSILON walkthrough that closes #23.

--- a/default.html
+++ b/default.html
@@ -415,7 +415,7 @@
           </tr>
         </tbody>
         <tbody>
-          <tr class="not-ready" data-test="Number.EPSILON">
+          <tr data-test="Number.EPSILON">
             <th rowspan="7">Number extensions</th>
             <td>Number.EPSILSON</td>
             <td></td>
