Created the walkthrough for Number.MAX_SAFE_INTEGER which closes #24.

--- a/default.html
+++ b/default.html
@@ -421,7 +421,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Number.MAX_SAFE_INTEGER">
+          <tr data-test="Number.MAX_SAFE_INTEGER">
             <td>Number.MAX_SAFE_INTEGER</td>
             <td></td>
             <td></td>
