Created walkthrough for Number.MIN_SAFE_INTEGER that closes #25.

--- a/default.html
+++ b/default.html
@@ -426,7 +426,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Number.MIN_SAFE_INTEGER">
+          <tr data-test="Number.MIN_SAFE_INTEGER">
             <td>Number.MIN_SAFE_INTEGER</td>
             <td></td>
             <td></td>
