Created the walkthrough for Number.isFinite which closes #26.

--- a/default.html
+++ b/default.html
@@ -431,7 +431,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Number.isFinite">
+          <tr data-test="Number.isFinite">
             <td>Number.isFinite</td>
             <td></td>
             <td></td>
