Created walkthrough for Number.isInteger which closes #27.

--- a/default.html
+++ b/default.html
@@ -436,7 +436,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Number.isInteger">
+          <tr data-test="Number.isInteger">
             <td>Number.isInteger</td>
             <td></td>
             <td></td>
