Created walkthrough for Number.isNaN which closes #28.

--- a/default.html
+++ b/default.html
@@ -441,7 +441,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Number.isNaN">
+          <tr data-test="Number.isNaN">
             <td>Number.isNaN</td>
             <td></td>
             <td></td>
