Created walkthrough for Number.isSafeInteger which closes #29.

--- a/default.html
+++ b/default.html
@@ -446,7 +446,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="Number.isSafeInteger">
+          <tr data-test="Number.isSafeInteger">
             <td>Number.isSafeInteger</td>
             <td></td>
             <td></td>
