Created walkthrough for RegExp 'u' flag which closes #30.

--- a/default.html
+++ b/default.html
@@ -453,7 +453,7 @@
           </tr>
         </tbody>
         <tbody>
-          <tr class="not-ready" data-test="RegExp &quot;u&quot; flag">
+          <tr data-test="RegExp &quot;u&quot; flag">
             <th rowspan="6">Regular expression extensions</th>
             <td>Unicode regular expression flag</td>
             <td></td>
