Created walkthrough for RegExp.prototype.compile which closes #31.

--- a/default.html
+++ b/default.html
@@ -459,7 +459,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="RegExp.prototype.compile">
+          <tr data-test="RegExp.prototype.compile">
             <td>Compile regular expressions</td>
             <td></td>
             <td></td>
