Created the walkthrough for String.fromCodePoint which closes #32.

--- a/default.html
+++ b/default.html
@@ -486,7 +486,7 @@
           </tr>
         </tbody>
         <tbody>
-          <tr class="not-ready" data-test="String.fromCodePoint">
+          <tr data-test="String.fromCodePoint">
             <th rowspan="6">String handling</th>
             <td>Create a string from a Unicode code point</td>
             <td></td>
