Created the walkthrough for String.prototype.codePointAt which closes #33.

--- a/default.html
+++ b/default.html
@@ -492,12 +492,12 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="String.prototype.codePointAt">
+          <tr data-test="String.prototype.codePointAt">
             <td>Get the code point of a character in a string</td>
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="String.prototype.contains">
+          <tr data-test="String.prototype.contains">
             <td>Check to see if a string contains a substring</td>
             <td></td>
             <td></td>
