Created the walkthrough for String.prototype.endsWith that closes #35.

--- a/default.html
+++ b/default.html
@@ -502,7 +502,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="String.prototype.endsWith">
+          <tr data-test="String.prototype.endsWith">
             <td>Check to see if a string ends with another string</td>
             <td></td>
             <td></td>
