Created the walkthrough for String.prototype.startsWith which closes #37.

--- a/default.html
+++ b/default.html
@@ -512,7 +512,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="String.prototype.startsWith">
+          <tr data-test="String.prototype.startsWith">
             <td>Check to see if a string begins with another string</td>
             <td></td>
             <td></td>
