Created the walkthrough for String.prototype.normalize which closes #36.

--- a/default.html
+++ b/default.html
@@ -507,7 +507,7 @@
             <td></td>
             <td></td>
           </tr>
-          <tr class="not-ready" data-test="String.prototype.normalize">
+          <tr data-test="String.prototype.normalize">
             <td>Normalize a string to one of the Unicode normalized forms</td>
             <td></td>
             <td></td>
