Put information about the linkys in the header.

--- a/default.html
+++ b/default.html
@@ -24,6 +24,12 @@
           Click a solid lime green "Yes" box below to learn about and try out a
           new feature in ECMAScript.
         </p>
+        <p>
+          Click the <span class="fa fa-external-link"></span> or the
+          <span class="fa fa-external-link-square"></span> next to the
+          walkthrough name for the specification documentation in a new
+          tab/window.
+        </p>
       </h2>
     </header>
     <section id="tools">
