Change the text in the instructions for viewing specification information.

--- a/default.html
+++ b/default.html
@@ -27,8 +27,7 @@
         <p>
           Click the <span class="fa fa-external-link"></span> or the
           <span class="fa fa-external-link-square"></span> next to the
-          walkthrough name for the specification documentation in a new
-          tab/window.
+          walkthrough name to view the specification documentation.
         </p>
       </h2>
     </header>
