Fix a link error.

--- a/example.html
+++ b/example.html
@@ -34,7 +34,7 @@
         <div id="console"></div>
       </div>
       <div class="pure-u">
-        <form class="pure-form" method="get" action="./default.html">
+        <form class="pure-form" method="get" action="./index.html">
           <fieldset>
             <button class="pure-button">Back to table of contents</button>
           </fieldset>
