Making the front-page nicer with more information and better ECMAscript.

--- a/example.html
+++ b/example.html
@@ -16,7 +16,7 @@
             <label for="use-console">
               <input id="use-console" type="checkbox" checked> Show in browser console
             </label>
-            <label for="use-traceur">
+            <label for="use-traceur" style="display:none;">
               <input id="use-traceur" type="checkbox" checked disabled=""> Force use of traceur
             </label>
           </fieldset>
