A couple more things.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="pure-u-3-4">
           <div class="pure-menu pure-menu-open pure-menu-horizontal">
             <ul>
-              <li><a href="#browser">What browser?</a></li>
+              <li class="pure-menu-selected"><a href="#browser">What browser?</a></li>
               <li><a href="#contributors">Contributors</a></li>
               <li><a href="#why">Why did you make this?</a></li>
               <li><a href="#thanks">Thanks to...</a></li>
