Add copyright in footer.

--- a/example.html
+++ b/example.html
@@ -33,13 +33,6 @@
         </form>
         <div id="console"></div>
       </div>
-      <div class="pure-u">
-        <form class="pure-form" method="get" action="./index.html">
-          <fieldset>
-            <button class="pure-button">Back to table of contents</button>
-          </fieldset>
-        </form>
-      </div>
     </div>
 
     <script>var exports = {}, tests = {};</script>
@@ -50,5 +43,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script>
     <script src="assets/setup.5.1.js"></script>
     <script src="assets/setup.6.0.js" type="application/javascript;version=1.7"></script>
+    <form class="pure-form" method="get" action="./index.html">
+      <footer>
+        <button class="pure-button">Back to table of contents</button>
+        Copyright 2014 by <a href="http://curtissimo.com">curtissimo</a>.
+        All rights reserved.
+      </footer>
+    </form>
   </body>
 </html>
