--- a/index.html
+++ b/index.html
@@ -694,6 +694,10 @@
           </tbody>
         </table>
       </section>
+    <footer>
+      Copyright 2014 by <a href="http://curtissimo.com">curtissimo</a>.
+      All rights reserved.
+    </footer>
     </div>
   </body>
 </html>
