Change the name of the example page.

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             </tr>
           </tbody>
         </table>
-        <table id="boring" data-href="./example.html">
+        <table id="boring" data-href="./simple-walkthrough.html">
           <colgroup>
             <col class="toc-group">
             <col class="toc-walkthrough">
