Move assets for simple walkthroughs to their own directory.

--- a/simple-walkthrough.html
+++ b/simple-walkthrough.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/global.css">
   </head>
-  <body>
+  <body data-asset-location="./simple-walkthrough-assets/">
     <div class="pure-g">
       <div class="pure-u-1-2">
         <form class="pure-form unsubmitable">
