Moved the HTML generation stuff to simple walkthrough and created the asset for it.

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
               <td></td>
             </tr>
             <tr class="not-ready" data-test="Unicode code point escapes">
-              <th rowspan="6">String handling</th>
+              <th rowspan="5">String handling</th>
               <td>Unicode code point escapes</td>
               <td></td>
               <td></td>
@@ -402,11 +402,6 @@
             </tr>
             <tr class="not-ready" data-test="tagged template strings">
               <td>Destructuring template strings</td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr class="not-ready" data-test="String.prototype HTML methods">
-              <td>HTML generation methods</td>
               <td></td>
               <td></td>
             </tr>
@@ -661,7 +656,7 @@
           </tbody>
           <tbody>
             <tr data-test="String.fromCodePoint">
-              <th rowspan="6">String handling</th>
+              <th rowspan="7">String handling</th>
               <td>Create a string from a Unicode code point</td>
               <td></td>
               <td></td>
@@ -678,6 +673,11 @@
             </tr>
             <tr data-test="String.prototype.endsWith">
               <td>Check to see if a string ends with another string</td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr data-test="String.prototype HTML methods">
+              <td>HTML generation methods</td>
               <td></td>
               <td></td>
             </tr>
