Added simple walkthrough of Unicode code point escapes.

--- a/index.html
+++ b/index.html
@@ -389,13 +389,8 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="not-ready" data-test="Unicode code point escapes">
-              <th rowspan="5">String handling</th>
-              <td>Unicode code point escapes</td>
-              <td></td>
-              <td></td>
-            </tr>
             <tr class="not-ready" data-test="template strings">
+              <th rowspan="4">String handling</th>
               <td>Template strings</td>
               <td></td>
               <td></td>
@@ -656,7 +651,7 @@
           </tbody>
           <tbody>
             <tr data-test="String.fromCodePoint">
-              <th rowspan="7">String handling</th>
+              <th rowspan="8">String handling</th>
               <td>Create a string from a Unicode code point</td>
               <td></td>
               <td></td>
@@ -688,6 +683,11 @@
             </tr>
             <tr data-test="String.prototype.startsWith">
               <td>Check to see if a string begins with another string</td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr data-test="Unicode code point escapes">
+              <td>Unicode code point escapes</td>
               <td></td>
               <td></td>
             </tr>
