React to the removal of Symbol.create from ES6 and kangax's compatibility data.

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr data-test="Symbol.create, Symbol.hasInstance, Symbol.isConcatSpreadable, Symbol.isRegExp, Symbol.iterator, Symbol.toPrimitive, Symbol.toStringTag, Symbol.unscopables">
+            <tr data-test="Symbol.hasInstance, Symbol.isConcatSpreadable, Symbol.isRegExp, Symbol.iterator, Symbol.toPrimitive, Symbol.toStringTag, Symbol.unscopables">
               <td>Advanced symbols for conversion</td>
               <td></td>
               <td></td>
