--- a/index.html
+++ b/index.html
@@ -222,207 +222,168 @@
             <col class="toc-group">
             <col class="toc-walkthrough">
             <col class="toc-native-support">
-            <col class="toc-traceur-support">
           </colgroup>
           <thead>
             <tr>
               <th colspan="2" class="toc-group-walkthrough">Interesting narrated walkthroughs</th>
-              <th class="toc-native-support">Native in your browser?</th>
-              <th class="toc-traceur-support">Supported by traceur?</th>
+              <th class="toc-native-support">Supported by...?</th>
             </tr>
           </thead>
           <tbody>
             <tr class="not-ready" data-test="let, const" data-href="let-and-const/default.html">
               <td colspan="2"><code>let</code> and <code>const</code></td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="class, super">
               <td colspan="2"><code>class</code> and <code>super</code></td>
-              <td></td>
               <td></td>
             </tr>
             <tr class="not-ready" data-test="shorthand methods, shorthand properties">
               <td colspan="2">Syntactic sugar for property and method declarations</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="arrow functions">
               <td colspan="2">Arrow functions</td>
-              <td></td>
               <td></td>
             </tr>
             <tr class="not-ready" data-test="Promise">
               <td colspan="2">Promises</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="Proxy">
               <td colspan="2">Proxy objects</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="Reflect">
               <td colspan="2">Reflection methods</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="spread array (...) operator, spread call (...) operator, string spreading">
               <td colspan="2">"Spreading" - splicing array- and string-parameters into other arrays and function calls</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="RegExp &quot;y&quot; flag">
               <td colspan="2">Sticky regular expressions</td>
-              <td></td>
               <td></td>
             </tr>
             <tr class="not-ready" data-test="Map, Set">
               <th rowspan="4">Collections</th>
               <td>Native non-Array collections</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="WeakMap, WeakSet">
               <td>Weak native non-Array collections</td>
-              <td></td>
               <td></td>
             </tr>
             <tr class="not-ready" data-test="typed arrays">
               <td>Strongly-typed arrays</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="typed arrays (DataView)">
               <td>Views into strongly-typed arrays</td>
-              <td></td>
               <td></td>
             </tr>
             <tr class="not-ready" data-test="destructuring">
               <th rowspan="4">Destructuring</th>
               <td>Complex direct assignments</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="destructuring defaults">
               <td>Complex assignments of default parameter values</td>
-              <td></td>
               <td></td>
             </tr>
             <tr class="not-ready" data-test="destructuring parameters">
               <td>Complex assignments of parameter values</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="destructuring rest">
               <td>Complex assignment to a spread</td>
-              <td></td>
               <td></td>
             </tr>
             <tr class="not-ready" data-test="for..of loops">
               <th rowspan="2">Flow control</th>
               <td><code>for..of</code> loops (instead of <code>for..in</code>)</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="generators (yield)">
               <td>Generator functions (and the yield keyword)</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="Function.prototype.toMethod">
               <th rowspan="6">Functions</th>
               <td>Turning functions into methods</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="default function parameters">
               <td>Default function parameters</td>
-              <td></td>
               <td></td>
             </tr>
             <tr class="not-ready" data-test="rest parameters">
               <td>Binding the remaining parameters of a function to a single variable</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="function &quot;name&quot; property">
               <td>Name property of functions</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="proper tail calls (tail call optimisation)">
               <td>Tail-call recursion</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="block-level function declaration">
               <td>Block-level scoping of function declarations</td>
-              <td></td>
               <td></td>
             </tr>
             <tr class="not-ready" data-test="computed properties">
               <th rowspan="4">Metaprogramming</th>
               <td>Computed properties</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="Object.prototype.__proto__, __proto__ in object literals">
               <td>Getter and setter prototype property</td>
-              <td></td>
               <td></td>
             </tr>
             <tr class="not-ready" data-test="Object.assign">
               <td>Mixin properties of other objects</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="Object.setPrototypeOf">
               <td>Use a function to set the prototype of an object</td>
-              <td></td>
               <td></td>
             </tr>
             <tr class="not-ready" data-test="modules">
               <th rowspan="2">Modules</th>
               <td><code>export</code> keyword</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Reflect.Loader">
               <td>Module loader</td>
-              <td></td>
               <td></td>
             </tr>
             <tr class="not-ready" data-test="template strings">
               <th rowspan="4">String handling</th>
               <td>Template strings</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="tagged template strings">
               <td>Destructuring template strings</td>
-              <td></td>
               <td></td>
             </tr>
             <tr class="not-ready" data-test="String.prototype.repeat">
               <td>New string from repeating a single string</td>
               <td></td>
-              <td></td>
             </tr>
             <tr class="not-ready" data-test="String.raw">
               <td>Programmatic substitution in template strings</td>
-              <td></td>
               <td></td>
             </tr>
             <tr class="not-ready" data-test="Global symbol registry, Symbol, Object.getOwnPropertySymbols">
               <th rowspan="2">Symbols</th>
               <td>Simple symbols as properties</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Symbol.hasInstance, Symbol.isConcatSpreadable, Symbol.isRegExp, Symbol.iterator, Symbol.toPrimitive, Symbol.toStringTag, Symbol.unscopables">
               <td>Advanced symbols for conversion</td>
-              <td></td>
               <td></td>
             </tr>
           </tbody>
@@ -432,13 +393,11 @@
             <col class="toc-group">
             <col class="toc-walkthrough">
             <col class="toc-native-support">
-            <col class="toc-traceur-support">
           </colgroup>
           <thead>
             <tr>
               <th colspan="2">Boring text-only experiences</th>
-              <th>Native in your browser?</th>
-              <th>Supported by traceur?</th>
+              <th>Supported by...?</th>
             </tr>
           </thead>
           <tbody>
@@ -446,51 +405,41 @@
               <th rowspan="10">Array extensions</th>
               <td>Array.from</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Array.of">
               <td>Array.of</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="Array.prototype.copyWithin">
               <td>Array.prototype.copyWithin</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Array.prototype.entries">
               <td>Array.prototype.entries</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="Array.prototype.fill">
               <td>Array.prototype.fill</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Array.prototype.find">
               <td>Array.prototype.find</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="Array.prototype.findIndex">
               <td>Array.prototype.findIndex</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Array.prototype.keys">
               <td>Array.prototype.keys</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="Array.prototype.values">
               <td>Array.prototype.values</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Array.prototype[Symbol.unscopables]">
               <td>Array.prototype[Symbol.unscopables]</td>
-              <td></td>
               <td></td>
             </tr>
           </tbody>
@@ -499,86 +448,69 @@
               <th rowspan="17">Math extensions</th>
               <td>Math.acosh (inverse hyperbolic cosine)</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Math.asinh">
               <td>Math.asinh (inverse hyperbolic sine)</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="Math.atanh">
               <td>Math.atanh (inverse hyperbolic tangent)</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Math.cbrt">
               <td>Math.cbrt (cube root)</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="Math.clz32">
               <td>Math.clz32 (count leading zero bits in the 32-bit binary representation of its argument)</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Math.cosh">
               <td>Math.cosh (hyperbolic cosine)</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="Math.expm1">
               <td>Math.expm1 (e<sup>x</sup> - 1)</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Math.fround">
               <td>Math.fround (float round)</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="Math.hypot">
               <td>Math.hypot (square root of the sum of squares)</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Math.imul">
               <td>Math.imul (integer multiplication)</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="Math.log10">
               <td>Math.log10 (base 10 logarithm)</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Math.log1p">
               <td>Math.log1p (natural logarithm of 1 + x)</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="Math.log2">
               <td>Math.log2 (base 2 logarithm)</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Math.sign">
               <td>Math.sign (the sign of the number)</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="Math.sinh">
               <td>Math.sinh (hyperbolic sine)</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Math.tanh">
               <td>Math.tanh (hyperbolic tangent)</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Math.trunc">
               <td>Math.trunc (truncation of the fraction part of a number)</td>
-              <td></td>
               <td></td>
             </tr>
           </tbody>
@@ -587,36 +519,29 @@
               <th rowspan="7">Number extensions</th>
               <td>Number.EPSILSON</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Number.MAX_SAFE_INTEGER">
               <td>Number.MAX_SAFE_INTEGER</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="Number.MIN_SAFE_INTEGER">
               <td>Number.MIN_SAFE_INTEGER</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Number.isFinite">
               <td>Number.isFinite</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="Number.isInteger">
               <td>Number.isInteger</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Number.isNaN">
               <td>Number.isNaN</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Number.isSafeInteger">
               <td>Number.isSafeInteger</td>
-              <td></td>
               <td></td>
             </tr>
           </tbody>
@@ -625,31 +550,25 @@
               <th rowspan="6">Regular expression extensions</th>
               <td>Unicode regular expression flag</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="RegExp.prototype.compile">
               <td>Compile regular expressions</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="RegExp.prototype.match">
               <td>Matching a string from a regular expression</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="RegExp.prototype.replace">
               <td>Replace a match in a string from a regular expression</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="RegExp.prototype.search">
               <td>Search for a substring in a string from a regular expression</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="RegExp.prototype.split">
               <td>Split a string from a regular expression</td>
-              <td></td>
               <td></td>
             </tr>
           </tbody>
@@ -658,41 +577,33 @@
               <th rowspan="8">String handling</th>
               <td>Create a string from a Unicode code point</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="String.prototype.codePointAt">
               <td>Get the code point of a character in a string</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="String.prototype.contains">
               <td>Check to see if a string contains a substring</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="String.prototype.endsWith">
               <td>Check to see if a string ends with another string</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="String.prototype HTML methods">
               <td>HTML generation methods</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="String.prototype.normalize">
               <td>Normalize a string to one of the Unicode normalized forms</td>
-              <td></td>
               <td></td>
             </tr>
             <tr data-test="String.prototype.startsWith">
               <td>Check to see if a string begins with another string</td>
               <td></td>
-              <td></td>
             </tr>
             <tr data-test="Unicode code point escapes">
               <td>Unicode code point escapes</td>
-              <td></td>
               <td></td>
             </tr>
           </tbody>
