Update the instructions.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             landscape of chaos and fun.
           </p>
           <p>
-            Click a solid lime green "Yes" box below to learn about and try out a
-            new feature in ECMAScript.
+            Click a solid lime green box below to try out a new feature in
+            ECMAScript supported by either your browser or traceur.
           </p>
           <p>
             Click the <span class="fa fa-external-link"></span> or the
