Make simple-walkthrough have feature parity using ES6 modules.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/global.css">
 
-    <script src="./assets/traceur.js"></script>
+    <script src="https://cdn.rawgit.com/jmcriffey/bower-traceur/0.0.72/traceur.js"></script>
     <script src="https://cdn.rawgit.com/ModuleLoader/es6-module-loader/v0.9.4/dist/es6-module-loader.js"></script>
     <script src="https://cdn.rawgit.com/systemjs/systemjs/0.9.3/dist/system.js"></script>
     <script src="/assets/system.config.js"></script>
