--- a/simple-walkthrough.html
+++ b/simple-walkthrough.html
@@ -13,12 +13,6 @@
         <form class="pure-form unsubmitable">
           <fieldset>
             <button id="run" class="pure-button pure-button-primary"><span class="fa fa-play"></span> Run (⌘+S)</button>
-            <label for="use-console">
-              <input id="use-console" type="checkbox" checked> Show in browser console
-            </label>
-            <label for="use-traceur" style="display:none;">
-              <input id="use-traceur" type="checkbox" checked disabled=""> Force use of traceur
-            </label>
           </fieldset>
         </form>
         <div class="editor-holder">
@@ -35,14 +29,17 @@
       </div>
     </div>
 
-    <script>var exports = {}, tests = {};</script>
-    <script src="https://kangax.github.io/compat-table/data-es6.js"></script>
-    <script src="assets/default.js"></script>
-    <script src="https://google.github.io/traceur-compiler/bin/traceur.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script>
-    <script src="assets/setup.5.1.js"></script>
-    <script src="assets/setup.6.0.js" type="application/javascript;version=1.7"></script>
+
+    <script src="https://cdn.rawgit.com/jmcriffey/bower-traceur/0.0.72/traceur.js"></script>
+    <script src="https://cdn.rawgit.com/ModuleLoader/es6-module-loader/v0.9.4/dist/es6-module-loader.js"></script>
+    <script src="https://cdn.rawgit.com/systemjs/systemjs/0.9.3/dist/system.js"></script>
+    <script src="/assets/system.config.js"></script>
+
+    <script type="application/javascript;version=1.7" src="/assets/repl.js"></script>
+    <script>System.import('setup');</script>
+
     <form class="pure-form" method="get" action="./index.html">
       <footer>
         <button class="pure-button">Back to table of contents</button>
