--- a/simple-walkthrough.html
+++ b/simple-walkthrough.html
@@ -46,6 +46,6 @@
     <script src="/assets/system.config.js"></script>
 
     <script type="application/javascript;version=1.7" src="/assets/repl.js"></script>
-    <script>System.import('setup');</script>
+    <script>System.import('simple-walkthrough-setup');</script>
   </body>
 </html>
