--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/global.css">
+    <link rel="stylesheet" href="./assets/global.css">
 
     <script src="https://cdn.rawgit.com/jmcriffey/bower-traceur/0.0.72/traceur.js"></script>
     <script src="https://cdn.rawgit.com/ModuleLoader/es6-module-loader/v0.9.4/dist/es6-module-loader.js"></script>
     <script src="https://cdn.rawgit.com/systemjs/systemjs/0.9.3/dist/system.js"></script>
-    <script src="/assets/system.config.js"></script>
+    <script src="./assets/system.config.js"></script>
 
-    <script type="application/javascript;version=1.7" src="/assets/tests.js"></script>
+    <script type="application/javascript;version=1.7" src="./assets/tests.js"></script>
     <script>System.import('index');</script>
   </head>
   <body>
