Need raw output for quotes in the installation of the simple walkthrough.

--- a/simple-walkthroughs/RegExp.u.flag.html
+++ b/simple-walkthroughs/RegExp.u.flag.html
@@ -72,6 +72,6 @@ console.log(s.match(/I got the . on me!/u));</div>
     <script src="../assets/simple-walkthrough.system.config.js"></script>
 
     <script type="application/javascript;version=1.7" src="../assets/repl.js"></script>
-    <script>System.import('simple-walkthrough-setup').then(function (m) { m.install('RegExp &quot;u&quot; flag'); });</script>
+    <script>System.import('simple-walkthrough-setup').then(function (m) { m.install('RegExp "u" flag'); });</script>
   </body>
 </html>
