Added license to relevant pages.

--- a/index.html
+++ b/index.html
@@ -643,8 +643,8 @@
         </table>
       </section>
     <footer>
-      Copyright 2014 by <a href="http://curtissimo.com">curtissimo</a>.
-      All rights reserved.
+      Copyright 2014 by <a href="http://curtissimo.com">curtissimo</a>.<br>
+      <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">ES6 Walkthroughs</span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">curtissimo, llc</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
     </footer>
     </div>
   </body>
