--- a/simple-walkthroughs/String.prototype.codePointAt.html
+++ b/simple-walkthroughs/String.prototype.codePointAt.html
@@ -72,8 +72,8 @@ console.log(codePoint, char);</div>
     <form class="pure-form" method="get" action="../index.html">
       <footer>
         <button class="pure-button">Back to table of contents</button>
-        Copyright 2014 by <a href="http://curtissimo.com">curtissimo</a>.
-        All rights reserved.
+        Copyright 2014 by <a href="http://curtissimo.com">curtissimo</a>
+        licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC A-NC-SA 4.0 International License</a>.
       </footer>
     </form>
 
