Better names and refactor loader.
Changed “Run” to “Evaluate” on walk throughs and change ⌘+S to ⌘+E.
Extracted loader to separate module.
Started narrated work.

--- a/simple-walkthroughs/Array.from.html
+++ b/simple-walkthroughs/Array.from.html
@@ -21,7 +21,7 @@
       <div class="pure-u-1-2">
         <form class="pure-form unsubmitable">
           <fieldset>
-            <button id="run" class="pure-button pure-button-primary"><span class="fa fa-play"></span> Run (⌘+S)</button>
+            <button id="evaluate" class="pure-button pure-button-primary"><span class="fa fa-play"></span> Evaluate (⌘+E)</button>
           </fieldset>
         </form>
         <div class="editor-holder">
