--- a/simple-walkthroughs/RegExp.prototype.replace.html
+++ b/simple-walkthroughs/RegExp.prototype.replace.html
@@ -21,7 +21,7 @@
       <div class="pure-u-1-2">
         <form class="pure-form unsubmitable">
           <fieldset>
-            <button id="run" class="pure-button pure-button-primary"><span class="fa fa-play"></span> Run (⌘+S)</button>
+            <button id="evaluate" class="pure-button pure-button-primary"><span class="fa fa-play"></span> Evaluate (⌘+E)</button>
           </fieldset>
         </form>
         <div class="editor-holder">
