Show percentage of native support for browser.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
           </p>
           <p>
             Click a solid lime green box below to try out a new feature in
-            ECMAScript supported by either your browser or traceur.
+            ECMAScript supported by either traceur or natively in your browser
+            which supports <span id="support">?</span>% of the examples.
           </p>
           <p>
             Click the <span class="fa fa-external-link"></span> or the
